fixed view on tablets

--- a/steepshot_io/static/css/main.css
+++ b/steepshot_io/static/css/main.css
@@ -15,6 +15,7 @@ html {
     font-size: 1em;
     line-height: 1.4;
     height:100%;
+    overflow: hidden;
 }
 
 /*
@@ -225,7 +226,7 @@ a {
 #buttons {
     border:solid #f0f1f5 1px;
     border-radius: 10px;
-    height: 180px;
+    height: 200px;
     text-align: left;
     font-size:0.8em;
     z-index: 13;
@@ -247,7 +248,7 @@ a {
 }
 
 #buttons a + p {
-    margin: 25px 15px 20px;
+    margin: 25px 15px 30px;
 }
 
 #buttons a {
@@ -261,8 +262,8 @@ a {
 }
 
 .btpg2 {
-    margin-left: 48% !important;
-    top: 490px !important;
+    margin-left: 45% !important;
+    top: 520px !important;
 }
 
 #mimg img, #mimg2 img, #mimg3 img {
@@ -479,6 +480,7 @@ a {
 }
 
 .hd .textbox1 {
+    display: none !important;
     opacity: 0 !important;
 }
 
@@ -770,7 +772,7 @@ input:focus {
 
     .backtext {
         background-size:100%;
-        margin: 8% 0 -6.5em 0;
+        margin: 5% 0 -2.5em 0;
     }
 
     .frontext {
@@ -778,15 +780,31 @@ input:focus {
     }
 
     #panel3 {
-        width:100%;
+        width: 100%;
         text-align: center;
-        margin:-160px auto auto;
+        margin: -120px auto auto;
         position: relative;
     }
 
-    #panel3 input{
+    #panel3 input {
         width: 85%;
         text-align: center;
+    }
+
+    #panel3 label {
+        width: 100%;
+    }
+
+    #panel3 input.submit-input {
+        margin: 35px auto;
+    }
+
+    #panel3 .active label {
+        margin-top: -10px;
+    }
+
+    #request-form {
+        margin-top: 15vh;
     }
 
     #submit { 
@@ -804,10 +822,11 @@ input:focus {
         display:none!important;
     }
 
+
     #panel2 {
         width: 100%;
         margin-left: 0;
-        margin-top: 100px !important;
+        margin-top: 40px !important;
     }
 
     .textp2 {
@@ -820,9 +839,13 @@ input:focus {
         top:auto;
     }
 
+    #buttons.hd {
+        display: none;
+    }
+
     .btpg2 {
-        margin-left: auto!important;
-        top:auto !important;
+        margin-left: auto !important;
+        top: 100px !important;
     }
 
     #buttons{
@@ -830,7 +853,7 @@ input:focus {
         width:100%;
         height:100px;
         position: relative;
-        top:auto;
+        top: 25px;
     }
 
     #buttons p {
@@ -947,10 +970,6 @@ input:focus {
 
     .hd p {
         height: 0;
-    }
-
-    .hd .textbox1 {
-
     }
 
     .wrapper{
@@ -1184,13 +1203,38 @@ input:focus {
     #panel3 .active label{
         margin-top: -10px;
         font-size: 12px;
-        color: #7ed321;
     }
 
     #submit{
         width: auto;
     }
 }
+
+
+/*
+ *    Large screens
+ */
+
+@media (min-width: 1650px) and (max-width: 2099px) {
+    .btpg2 {
+        margin-left: 39% !important;
+        top: 520px !important;
+    }
+}
+
+
+/*
+ *    Extra large screens
+ */
+
+@media (min-width: 2100px) {
+    .btpg2 {
+        margin-left: 30% !important;
+        top: 520px !important;
+    }
+}
+
+
 
 /* ==========================================================================
    Helper classes
